fix style and alignments of the hole containers

--- a/style.css
+++ b/style.css
@@ -1,36 +1,32 @@
 * {
     box-sizing: border-box;
 }
-
 body{
     cursor: url(./img/cursor.png), default;
     background-color: #c0c86d;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     margin: 0;
     padding: 0;
+    overflow: hidden;
+}
+.main-container{
+    width: 100%;
     height: 100vh;
 }
-
-/* .controls button {
-    padding:20px;
-    border:black;
-    border-radius:10px;
-}
-section.init {
-    border: 1px solid black;
-}
- */
  
 .bg {
     background-image: url(./img/background.png);
     background-repeat: no-repeat;
-    width: 1920px;
-    height: 1080px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    height: 100%;
+    max-width: 1920px;
+    max-height: 1080px;
+}
+
+.hole-keeper{
+    height: 86%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    justify-items: center;
     align-items: center;
 }
 
@@ -38,40 +34,30 @@ section.init {
     background-color: black;
     border-radius: 50%;
     overflow: visible;
-    width: 267px;
-    height: 267px;
-}
-
-.hole-container {
-    width: 25%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 240px;
+    height: 240px;
 }
 
 .mole {
     position: relative;
-    right: 30px;
+    height: 100%;
+    right:30px;
 }
-
 .hungry {
     cursor: url(img/cursor-worm.png), default;
 }
-
 .hide,
 .gone {
     display: none;
 }
-
 .worm {
-    width:1660px;
+    width:70vw;
 }
-
 .worm-container {
     overflow: hidden;
     transition: width 0.5s ease-in-out;
 }
-
 .worm-box {
-    width: 1660px;
+    width: 70vw;
+    margin:auto;
 }
